tests/ui/async-await/await-keyword/post_expansion_error.stderr
error: expected expression, found `)`
  --> $DIR/post_expansion_error.rs:8:12
   |
LL |     await!()
   |            ^ expected expression

error: aborting due to 1 previous error

